--- a/src/main/resources/templates/documentation/index.html
+++ b/src/main/resources/templates/documentation/index.html
@@ -467,7 +467,7 @@
                             <li><!-- start message -->
                               <a href="#">
                                 <div class="pull-left">
-                                  <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                  <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
                                 </div>
                                 <h4>
                                   Support Team
@@ -536,13 +536,13 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                        <img th:src="@{/dist/img/user2-160x160.jpg}" class="user-image" alt="User Image">
                         <span class="hidden-xs">Alexander Pierce</span>
                       </a>
                       <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                          <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                          <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
                           <p>
                             Alexander Pierce - Web Developer
                             <small>Member since Nov. 2012</small>
@@ -601,7 +601,7 @@
                       &LT;li>&LT;!-- start message -->
                         &LT;a href="#">
                           &LT;div class="pull-left">
-                            &LT;img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            &LT;img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
                           &LT;/div>
                           &LT;h4>
                             Sender Name
@@ -673,13 +673,13 @@
               &LT;!-- User Account: style can be found in dropdown.less -->
               &LT;li class="dropdown user user-menu">
                 &LT;a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  &LT;img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  &LT;img th:src="@{/dist/img/user2-160x160.jpg}" class="user-image" alt="User Image">
                   &LT;span class="hidden-xs">Alexander Pierce&LT;/span>
                 &LT;/a>
                 &LT;ul class="dropdown-menu">
                   &LT;!-- User image -->
                   &LT;li class="user-header">
-                    &LT;img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    &LT;img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
                     &LT;p>
                       Alexander Pierce - Web Developer
                       &LT;small>Member since Nov. 2012&LT;/small>
@@ -838,7 +838,7 @@
           &LT;!-- user panel (Optional) -->
           &LT;div class="user-panel">
             &LT;div class="pull-left image">
-              &LT;img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              &LT;img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
             &LT;/div>
             &LT;div class="pull-left info">
               &LT;p>User Name&LT;/p>
@@ -1477,7 +1477,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1489,7 +1489,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1501,7 +1501,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
@@ -1548,7 +1548,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1560,7 +1560,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1572,7 +1572,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
@@ -1619,7 +1619,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1631,7 +1631,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1643,7 +1643,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
@@ -1690,7 +1690,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1702,7 +1702,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1714,7 +1714,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
@@ -1765,7 +1765,7 @@
                 &LT;span class="direct-chat-name pull-left">Alexander Pierce&LT;/span>
                 &LT;span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm&LT;/span>
               &LT;/div>&LT;!-- /.direct-chat-info -->
-              &LT;img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image">&LT;!-- /.direct-chat-img -->
+              &LT;img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image">&LT;!-- /.direct-chat-img -->
               &LT;div class="direct-chat-text">
                 Is this template really for free? That's unbelievable!
               &LT;/div>&LT;!-- /.direct-chat-text -->
@@ -1777,7 +1777,7 @@
                 &LT;span class="direct-chat-name pull-right">Sarah Bullock&LT;/span>
                 &LT;span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm&LT;/span>
               &LT;/div>&LT;!-- /.direct-chat-info -->
-              &LT;img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image">&LT;!-- /.direct-chat-img -->
+              &LT;img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image">&LT;!-- /.direct-chat-img -->
               &LT;div class="direct-chat-text">
                 You better believe it!
               &LT;/div>&LT;!-- /.direct-chat-text -->
@@ -1789,7 +1789,7 @@
             &LT;ul class="contacts-list">
               &LT;li>
                 &LT;a href="#">
-                  &LT;img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                  &LT;img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                   &LT;div class="contacts-list-info">
                     &LT;span class="contacts-list-name">
                       Count Dracula
@@ -1838,7 +1838,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1850,7 +1850,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1862,7 +1862,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
@@ -1909,7 +1909,7 @@
                       <span class="direct-chat-name pull-left">Alexander Pierce</span>
                       <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
                     </div><!-- /.direct-chat-text -->
@@ -1921,7 +1921,7 @@
                       <span class="direct-chat-name pull-right">Sarah Bullock</span>
                       <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                     </div><!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                    <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="message user image"><!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
                     </div><!-- /.direct-chat-text -->
@@ -1933,7 +1933,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
+                        <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Contact Avatar">
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
                             Count Dracula
