--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,7 +30,7 @@
                                 <li><!-- start message -->
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                            <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Support Team
@@ -43,7 +43,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img th:src="@{/dist/img/user3-128x128.jpg}" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             AdminLTE Design Team
@@ -55,7 +55,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img th:src="@{/dist/img/user4-128x128.jpg}" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Developers
@@ -67,7 +67,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img th:src="@{/dist/img/user3-128x128.jpg}" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Sales Department
@@ -79,7 +79,7 @@
                                 <li>
                                     <a href="#">
                                         <div class="pull-left">
-                                            <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                            <img th:src="@{/dist/img/user4-128x128.jpg}" class="img-circle" alt="User Image">
                                         </div>
                                         <h4>
                                             Reviewers
@@ -216,13 +216,13 @@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                        <img th:src="@{/dist/img/user2-160x160.jpg}" class="user-image" alt="User Image">
                         <span class="hidden-xs">Administrator</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
 
                             <p>
                                 Administrator - Web Developer
@@ -250,7 +250,7 @@
                                 <a href="#" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                <a th:href="@{/pages/auth/logout}" class="btn btn-default btn-flat">退出登录</a>
                             </div>
                         </li>
                     </ul>
