--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -360,7 +360,7 @@
             <div class="box-body chat" id="chat-box">
               <!-- chat item -->
               <div class="item">
-                <img src="dist/img/user4-128x128.jpg" alt="user image" class="online">
+                <img th:src="@{/dist/img/user4-128x128.jpg}" alt="user image" class="online">
 
                 <p class="message">
                   <a href="#" class="name">
@@ -387,7 +387,7 @@
               <!-- /.item -->
               <!-- chat item -->
               <div class="item">
-                <img src="dist/img/user3-128x128.jpg" alt="user image" class="offline">
+                <img th:src="@{/dist/img/user3-128x128.jpg}" alt="user image" class="offline">
 
                 <p class="message">
                   <a href="#" class="name">
@@ -402,7 +402,7 @@
               <!-- /.item -->
               <!-- chat item -->
               <div class="item">
-                <img src="dist/img/user2-160x160.jpg" alt="user image" class="offline">
+                <img th:src="@{/dist/img/user2-160x160.jpg}" alt="user image" class="offline">
 
                 <p class="message">
                   <a href="#" class="name">
