--- a/src/main/resources/templates/pages/charts/flot.html
+++ b/src/main/resources/templates/pages/charts/flot.html
@@ -38,7 +38,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -595,7 +595,8 @@
 <!-- FLOT CATEGORIES PLUGIN - Used to draw bar charts -->
 <script src="../../bower_components/Flot/jquery.flot.categories.js"></script>
 <!-- Page script -->
-<script>
+<!--禁用Thymeleaf内联语法导致的[[符号错误干扰二维数组-->
+<script th:inline="none">
   $(function () {
     /*
      * Flot Interactive Chart
