--- a/src/main/resources/templates/pages/examples/blank.html
+++ b/src/main/resources/templates/pages/examples/blank.html
@@ -42,7 +42,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
