--- a/src/main/resources/templates/pages/examples/lockscreen.html
+++ b/src/main/resources/templates/pages/examples/lockscreen.html
@@ -37,7 +37,7 @@
   <div class="lockscreen-item">
     <!-- lockscreen image -->
     <div class="lockscreen-image">
-      <img src="../../dist/img/user1-128x128.jpg" alt="User Image">
+      <img th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
     </div>
     <!-- /.lockscreen-image -->
 
