--- a/src/main/resources/templates/pages/widgets.html
+++ b/src/main/resources/templates/pages/widgets.html
@@ -38,7 +38,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img th:src="@{/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -662,7 +662,7 @@
                     <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     Is this template really for free? That's unbelievable!
                   </div>
@@ -677,7 +677,7 @@
                     <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     You better believe it!
                   </div>
@@ -692,7 +692,7 @@
                 <ul class="contacts-list">
                   <li>
                     <a href="#">
-                      <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                      <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
 
                       <div class="contacts-list-info">
                             <span class="contacts-list-name">
@@ -753,7 +753,7 @@
                     <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     Is this template really for free? That's unbelievable!
                   </div>
@@ -768,7 +768,7 @@
                     <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     You better believe it!
                   </div>
@@ -783,7 +783,7 @@
                 <ul class="contacts-list">
                   <li>
                     <a href="#">
-                      <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                      <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
 
                       <div class="contacts-list-info">
                             <span class="contacts-list-name">
@@ -844,7 +844,7 @@
                     <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     Is this template really for free? That's unbelievable!
                   </div>
@@ -859,7 +859,7 @@
                     <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     You better believe it!
                   </div>
@@ -874,7 +874,7 @@
                 <ul class="contacts-list">
                   <li>
                     <a href="#">
-                      <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                      <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
 
                       <div class="contacts-list-info">
                             <span class="contacts-list-name">
@@ -935,7 +935,7 @@
                     <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user1-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     Is this template really for free? That's unbelievable!
                   </div>
@@ -950,7 +950,7 @@
                     <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                   </div>
                   <!-- /.direct-chat-info -->
-                  <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
+                  <img class="direct-chat-img" th:src="@{/dist/img/user3-128x128.jpg}" alt="Message User Image"><!-- /.direct-chat-img -->
                   <div class="direct-chat-text">
                     You better believe it!
                   </div>
@@ -965,7 +965,7 @@
                 <ul class="contacts-list">
                   <li>
                     <a href="#">
-                      <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                      <img class="contacts-list-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
 
                       <div class="contacts-list-info">
                             <span class="contacts-list-name">
@@ -1011,7 +1011,7 @@
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header bg-yellow">
               <div class="widget-user-image">
-                <img class="img-circle" src="../dist/img/user7-128x128.jpg" alt="User Avatar">
+                <img class="img-circle" th:src="@{/dist/img/user7-128x128.jpg}" alt="User Avatar">
               </div>
               <!-- /.widget-user-image -->
               <h3 class="widget-user-username">Nadia Carmichael</h3>
@@ -1038,7 +1038,7 @@
               <h5 class="widget-user-desc">Founder &amp; CEO</h5>
             </div>
             <div class="widget-user-image">
-              <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Avatar">
+              <img class="img-circle" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Avatar">
             </div>
             <div class="box-footer">
               <div class="row">
@@ -1082,7 +1082,7 @@
               <h5 class="widget-user-desc">Web Designer</h5>
             </div>
             <div class="widget-user-image">
-              <img class="img-circle" src="../dist/img/user3-128x128.jpg" alt="User Avatar">
+              <img class="img-circle" th:src="@{/dist/img/user3-128x128.jpg}" alt="User Avatar">
             </div>
             <div class="box-footer">
               <div class="row">
@@ -1126,7 +1126,7 @@
           <div class="box box-widget">
             <div class="box-header with-border">
               <div class="user-block">
-                <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                <img class="img-circle" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
                 <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
                 <span class="description">Shared publicly - 7:30 PM Today</span>
               </div>
@@ -1153,7 +1153,7 @@
             <div class="box-footer box-comments">
               <div class="box-comment">
                 <!-- User image -->
-                <img class="img-circle img-sm" src="../dist/img/user3-128x128.jpg" alt="User Image">
+                <img class="img-circle img-sm" th:src="@{/dist/img/user3-128x128.jpg}" alt="User Image">
 
                 <div class="comment-text">
                       <span class="username">
@@ -1168,7 +1168,7 @@
               <!-- /.box-comment -->
               <div class="box-comment">
                 <!-- User image -->
-                <img class="img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="User Image">
+                <img class="img-circle img-sm" th:src="@{/dist/img/user4-128x128.jpg}" alt="User Image">
 
                 <div class="comment-text">
                       <span class="username">
@@ -1185,7 +1185,7 @@
             <!-- /.box-footer -->
             <div class="box-footer">
               <form action="#" method="post">
-                <img class="img-responsive img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="Alt Text">
+                <img class="img-responsive img-circle img-sm" th:src="@{/dist/img/user4-128x128.jpg}" alt="Alt Text">
                 <!-- .img-push is used to add margin to elements next to floating images -->
                 <div class="img-push">
                   <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
@@ -1202,7 +1202,7 @@
           <div class="box box-widget">
             <div class="box-header with-border">
               <div class="user-block">
-                <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                <img class="img-circle" th:src="@{/dist/img/user1-128x128.jpg}" alt="User Image">
                 <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
                 <span class="description">Shared publicly - 7:30 PM Today</span>
               </div>
@@ -1255,7 +1255,7 @@
             <div class="box-footer box-comments">
               <div class="box-comment">
                 <!-- User image -->
-                <img class="img-circle img-sm" src="../dist/img/user3-128x128.jpg" alt="User Image">
+                <img class="img-circle img-sm" th:src="@{/dist/img/user3-128x128.jpg}" alt="User Image">
 
                 <div class="comment-text">
                       <span class="username">
@@ -1288,7 +1288,7 @@
             <!-- /.box-footer -->
             <div class="box-footer">
               <form action="#" method="post">
-                <img class="img-responsive img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="Alt Text">
+                <img class="img-responsive img-circle img-sm" th:src="@{/dist/img/user4-128x128.jpg}" alt="Alt Text">
                 <!-- .img-push is used to add margin to elements next to floating images -->
                 <div class="img-push">
                   <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
