--- a/src/main/resources/templates/pages/tables/simple.html
+++ b/src/main/resources/templates/pages/tables/simple.html
@@ -6,16 +6,16 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" th:href="@{/bower_components/bootstrap/dist/css/bootstrap.min.css}">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" th:href="@{/bower_components/font-awesome/css/font-awesome.min.css}">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" th:href="@{/bower_components/Ionicons/css/ionicons.min.css}">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" th:href="@{/dist/css/AdminLTE.min.css}">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" th:href="@{/dist/css/skins/_all-skins.min.css}">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,8 +43,8 @@
         <small>preview of simple tables</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Tables</a></li>
+        <li><a th:href="@{/#}"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a th:href="@{/#}">Tables</a></li>
         <li class="active">Simple</li>
       </ol>
     </section>
@@ -111,11 +111,11 @@
             <!-- /.box-body -->
             <div class="box-footer clearfix">
               <ul class="pagination pagination-sm no-margin pull-right">
-                <li><a href="#">&laquo;</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">&raquo;</a></li>
+                <li><a th:href="@{/#}">&laquo;</a></li>
+                <li><a th:href="@{/#}">1</a></li>
+                <li><a th:href="@{/#}">2</a></li>
+                <li><a th:href="@{/#}">3</a></li>
+                <li><a th:href="@{/#}">&raquo;</a></li>
               </ul>
             </div>
           </div>
@@ -188,11 +188,11 @@
 
               <div class="box-tools">
                 <ul class="pagination pagination-sm no-margin pull-right">
-                  <li><a href="#">&laquo;</a></li>
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">&raquo;</a></li>
+                  <li><a th:href="@{/#}">&laquo;</a></li>
+                  <li><a th:href="@{/#}">1</a></li>
+                  <li><a th:href="@{/#}">2</a></li>
+                  <li><a th:href="@{/#}">3</a></li>
+                  <li><a th:href="@{/#}">&raquo;</a></li>
                 </ul>
               </div>
             </div>
@@ -390,16 +390,16 @@
 <!-- ./wrapper -->
 
 <!-- jQuery 3 -->
-<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+<script th:src="@{/bower_components/jquery/dist/jquery.min.js}"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script th:src="@{/bower_components/bootstrap/dist/js/bootstrap.min.js}"></script>
 <!-- Slimscroll -->
-<script src="../../bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+<script th:src="@{/bower_components/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
 <!-- FastClick -->
-<script src="../../bower_components/fastclick/lib/fastclick.js"></script>
+<script th:src="@{/bower_components/fastclick/lib/fastclick.js}"></script>
 <!-- AdminLTE App -->
-<script src="../../dist/js/adminlte.min.js"></script>
+<script th:src="@{/dist/js/adminlte.min.js}"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../../dist/js/demo.js"></script>
+<script th:src="@{/dist/js/demo.js}"></script>
 </body>
 </html>
